--- a/templates/password_reset_otp.html
+++ b/templates/password_reset_otp.html
@@ -298,7 +298,7 @@
                                                         style="cursor:auto;color:#99AAB5;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-size:12px;line-height:24px;text-align:center;">
                                                         <a  style="color:#1EB0F4;text-decoration:none;"
                                                             target="_blank">Visit our site</a> • <a
-                                                            href="#"
+                                                            href="{{ domain }}{% url 'projects:project_list' %}"
                                                             style="color:#1EB0F4;text-decoration:none;"
                                                             target="_blank">@DEVSEARCH</a>
                                                     </div>
@@ -317,3 +317,5 @@
 </body>
 
 </html>
+
+{% comment %} FIX LATER {% endcomment %}
