Refactor project schema examples, views, and serializers for improved structure; update project URLs and password reset email link

--- a/templates/password_reset_email.html
+++ b/templates/password_reset_email.html
@@ -298,7 +298,7 @@
                                                         style="cursor:auto;color:#99AAB5;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-size:12px;line-height:24px;text-align:center;">
                                                         <a  style="color:#1EB0F4;text-decoration:none;"
                                                             target="_blank">Visit our site</a> • <a
-                                                            href="{{ domain }}{% url 'project_list' %}"
+                                                            href="{{ domain }}{% url 'project_list_create' %}"
                                                             style="color:#1EB0F4;text-decoration:none;"
                                                             target="_blank">@DEVSEARCH</a>
                                                     </div>
